# CUSail

./: .gitignore  CMakeLists.txt  README.md  a.out  conv_wayPoints.c  conv_wayPoints.h  main.c  nShort5.c  sailboat_test.readme  welcome.txt
Arduino Individual Sensor Code/IMU/IMU/: IMU.ino
Arduino Individual Sensor Code/Rotary_Sensor/: Rotary_Sensor.ino
Arduino Individual Sensor Code/SailMapTailMap/: SailMapTailMap.ino
Arduino Navgation Code/Nav V5.1/ShortTermNavigation/: Readme.txt  ShortTermNavigation.ino  navigation.cpp  navigation.h  sensors.cpp  sensors.h
Arduino Navgation Code/Nav V5.2/ShortTermNavigation/: Readme.txt  ShortTermNavigation.ino  navigation.cpp  navigation.h  sensors.cpp  sensors.h
Arduino Navgation Code/Nav V5/navigation/: Readme.txt  navigation.cpp  navigation.h  navigation.ino  sensors.cpp  sensors.h
Arduino Navgation Code/Nav V6/: ShortTermNavigation.ino  navigation.cpp
Arduino Navgation Code/Nav V6/ShortTermNavigation/: ShortTermNavigation.ino  TinyGPS++.cpp  navigation.cpp  navigation.h  sensors.cpp  sensors.h
Arduino_Individual_Sensor_Code/: Wind_Direction.ino
Arduino_Individual_Sensor_Code/GPS/: GPS.ino
Arduino_Individual_Sensor_Code/IMU/IMU/: IMU.ino
Arduino_Individual_Sensor_Code/Rotary_Sensor/: Rotary_Sensor.ino
Arduino_Individual_Sensor_Code/Wind_Direction/: Wind_Direction.ino
Arduino_Navigation_Code/Nav V6/ShortTermNavigation/: Readme.txt
Arduino_Navigation_Code/Nav V7/ShortTermNavigation/: navigation.cpp
Arduino_Navigation_Code/Nav V8/ShortTermNavigation/: navigation.cpp  sensors.cpp  sensors.h
Arduino_Navigation_Code/Nav_V10/ShortTermNavigation/: navigation.cpp  navigation.h  navigation_helper.cpp  navigation_helper.h  pixy.cpp  pixy.h  print.cpp  print.h  sensors.cpp  sensors.h
Arduino_Navigation_Code/Nav_V11/ShortTermNavigation/: nagivation_helper.h  navigation.cpp  navigation_helper.cpp  navigation_modularized.cpp  sensors.cpp  sensors_REMOTE_6987.cpp
Arduino_Navigation_Code/Nav_V12.5/ShortTermNavigation/: Readme.txt  ShortTermNavigation.ino  buoy_rounding_pseudo.txt  navigation.cpp  navigation_helper.cpp  navigation_helper.h  sensors.cpp  sensors.h
Arduino_Navigation_Code/Nav_V12/ShortTermNavigation/: navigation.cpp  navigation_helper.cpp  navigation_helper.h  print.cpp  sensors.cpp  sensors.h
Arduino_Navigation_Code/Nav_V13.2/ShortTermNavigation/: ShortTermNavigation.ino  navigation.cpp  navigation.h  navigation_helper.cpp  sensors.cpp  sensors.h
Arduino_Navigation_Code/Nav_V13/ShortTermNavigation/: navigation.cpp  navigation_helper.cpp  sensors.cpp
Arduino_Navigation_Code/Nav_V14/ShortTermNavigation/: nav_station.cpp  navigation.cpp  navigation.h  navigation_helper.cpp  print.cpp  sensors.cpp  sensors.h
Arduino_Navigation_Code/Nav_V15/ShortTermNavigation/: ShortTermNavigation.ino  navigation.cpp  navigation.h  navigation_helper.cpp  sensors.cpp
Arduino_Navigation_Code/Nav_V16/ShortTermNavigation/: ShortTermNavigation.ino  navigation.cpp  navigation.h  navigation_helper.cpp  navigation_helper.h  print.cpp  (+3 more)
GUI/: gui.py  log.txt
Individual Functions for Arduino Code/: directionalError.cpp  distanceError.cpp  haversineDistanceCalculator.cpp  pixy.cpp
Individual Functions for Arduino Code/SailMapTailMap/: SailMapTailMap.ino
Individual%20Functions%20for%20Arduino%20Code/: pixy.cpp
Individual_Functions_for_Arduino_Code/SailMapTailMap/: SailMapTailMap.ino
Lidar/: I2C_Lidar_Code.ino  README.md  pantilt_1.ino
NavAlgo/: PID.c  PID.h  TFT_test_BRL4.c.old  config.h  coordinates.c  coordinates.h  delay.c  delay.h  i2c_helper.h  main.c  navigation_helper.c  navigation_helper.h  navtest.c  navtest.h  pt_cornell_1_2_1.h  radio.c  radio.h  sensors.c  sensors.h  servo.c  servo.h  test.c  test.h
NavAlgo/nmea/: context.c  context.h  generate.c  generate.h  generator.c  generator.h  gmath.c  gmath.h  info.h  nmea.h  parse.c  parse.h  parser.c  parser.h  sentence.h  time.c  time.h  tok.c  tok.h
Nav_code_v2/: README.md  nav_alg_1.0.c  nav_v2_primitive.c  navigation.cpp  sensors.cpp  sensors.h  tacking-pseudocode.c
Sail and Tailvane Servo Testing Code/SailMapTailMap/: SailMapTailMap.ino
Short Term Navigation Algorithm/: nShort5.2.c  nShort5.c
Short Term Navigation/GPS/: GPS.ino
Short Term Navigation/Nav V3/: navigation.cpp
Short Term Navigation/Nav V3.2/: navigation.cpp  navigation.h  sensors.cpp  sensors.h
Short Term Navigation/Nav V4/: Nav V4.ino  navigation.cpp  navigation.h  sensors.cpp
Short Term Navigation/Rotary_Sensor/: Rotary_Sensor.ino
Short Term Navigation/SailMapTailMap/: SailMapTailMap.ino  SailMapTailMap.ino226771315140680258.tmp  SailMapTailMap.ino9050149731430708633.tmp
Simulators/: main1.m
Simulators/2DSailSim/: 0012-160000-2.txt  0012-160000.txt  100000.txt  HOW_TO_USE  ShortTermNavigation.ino  all_alphas3.m  arrow.m  compute_alpha3.m  inputs3.m  inputsIndivid.m  nShort2.c  nShort2.mexw64  nShort3.c  nShort3.mexmaci64  nShort3.mexw64  nShort4.c  nShort4.mexmaci64  nShort4.mexw64  nShort4python.py  nShort5.c  nShort5.mexmaci64  nShort5.mexw64  nShort6.c  nShort6.mexw64  nShort7.mexw64  nav_v2_primitive.c  nav_v2_primitive.h  nav_v2_primitive.mexmaci64  nav_v2_primitive.mexw64  navigation.cpp  sail3.m  sailn5.m  sailn5.m~  sailn6.m  testSail3.m  xf-naca001264-il-100000.txt  xf-naca001264-il-1000000.txt  xf-naca001264-il-50000.txt
Simulators/3DsailSim/: C_LD.m  README.txt  airfoil_forces2.m  animate.m  animateRT.m  bladeElement2.m  boatGeometry.m  euler2Hom.m  euler2Rot.m  hullForce_xy.m  hullForce_yz.m  main.m  nShort5.c  nShort5.mexw64  odeEuler.m  odeEuler2.m  rhs.m  setBoatParam.m  velocity_pnt.m  wrapTo2Pi.m
new_basestation/: BasetoArduinoFunc.m  BasetoArduinoTest.m  Mockup.ai  base_station.asv  base_station.fig  base_station.m  comm_test.m  senddata.m  write.m
new_basestation/2-way/: ArduinotoBase.m  BasetoArduino.m
new_basestation/art/: Boat.ai
new_basestation_py/: image_work.py  live_data.txt  matplotpractice.py  mpl.py  new_basestation.py  practicing_grid.py  pyqtgraphh.py  test.py  xbeeComm.py
new_basestation_py/GUI_Test_Suite/: GUI_Test_Suite.ino
(+62 files in other folders)
